--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- navbar -->
 
-    <nav class="navbar navbar-dark navbar-expand-md fixed-top">
+    <nav class="navbar navbar-dark navbar-expand-md fixed-top" id="navbar">
       <div class="container">
         <a class="navbar-brand" href="#"
           ><img class="logo" src="./img/logo.png" alt=""
@@ -179,6 +179,7 @@
 
     
     <!-- Optional JavaScript -->
+    <script src="main.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
