--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
     <nav class="navbar navbar-dark navbar-expand-md fixed-top" id="navbar">
       <div class="container">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="home.html"
           ><img class="logo" src="./img/logo.png" alt=""
         /></a>
         <button
@@ -290,7 +290,7 @@
               <h3 class="section_footer_heading">Quick Links</h3>
               <p><a href="restaurant.html">Restaurant Menu</a></p>
               <p><a href="takeaway.html">Take Away Menu</a></p>
-              <p><a href="contacts.html">Contact Us</a></p>
+              <p><a href="contact.html">Contact Us</a></p>
             </div>
           </div>
 
