--- a/about.html
+++ b/about.html
@@ -67,9 +67,9 @@
                 Menu
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item mx-auto" href="#">Restaurant</a>
+                <a class="dropdown-item mx-auto" href="MenuR.html">Restaurant</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item mx-auto" href="#">Take Away</a>
+                <a class="dropdown-item mx-auto" href="MenuT.html">Take Away</a>
               </div>
             </li>
             <li class="nav-item">
@@ -226,8 +226,8 @@
             </div>
             <div class="col-sm-6 col-lg-3">
               <h3 class="section_footer_heading">Quick Links</h3>
-              <p><a href="restaurant.html">Restaurant Menu</a></p>
-              <p><a href="takeaway.html">Take Away Menu</a></p>
+              <p><a href="MenuR.html">Restaurant Menu</a></p>
+              <p><a href="MenuT.html">Take Away Menu</a></p>
               <p><a href="contact.html">Contact Us</a></p>
             </div>
           </div>
