--- a/home.html
+++ b/home.html
@@ -343,8 +343,8 @@
             </div>
             <div class="col-sm-6 col-lg-3">
               <h3 class="section_footer_heading">Quick Links</h3>
-              <p><a href="restaurant.html">Restaurant Menu</a></p>
-              <p><a href="takeaway.html">Take Away Menu</a></p>
+              <p><a href="MenuR.html">Restaurant Menu</a></p>
+              <p><a href="MenuT.html">Take Away Menu</a></p>
               <p><a href="contact.html">Contact Us</a></p>
             </div>
           </div>
