added text content and restaurant data

--- a/MenuR.html
+++ b/MenuR.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Plough| Restaurant</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -50,7 +51,7 @@
     <nav class="navbar navbar-dark navbar-expand-md fixed-top" id="navbar">
       <div class="container">
         <a class="navbar-brand" href="home.html"
-          ><img class="logo" src="./img/logo.png" alt=""
+          ><img class="logo" src="./img1/logo.png" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -636,9 +637,9 @@
 
             <div class="col-sm-6 col-lg-3">
               <h3 class="section_footer_heading">Contacts</h3>
-              <p><i class="fas fa-map-marker-alt"></i> 96 Scotts Road, <br>Southall Middlesex <br>UB2 5DE</p>
-              <p><i class="fas fa-phone-alt"></i> + 44 20 8574 1506</p>
-              <!-- <p><i class="icon ion-ios-email-outline"></i> admin@SCOTSMAN.com</p>-->
+              <p><i class="fas fa-map-marker-alt"></i> 239 Sipson Rd,<br>West Drayton, Middlesex <br>UB7 0HW</p>
+              <p><i class="fas fa-phone-alt"></i>+ 44 20 8574 1596</p>
+
             </div>
             <div class="col-sm-6 col-lg-3">
               <h3 class="section_footer_heading">Follow us</h3>
@@ -671,7 +672,7 @@
           <div class="row">
             <div class="col-sm-12">
               <hr>
-             <p class="footer_info">© 2018 SCOTSMAN. All rights reserved. Designed by <a href="">Sab</a></p>
+             <p class="footer_info">© 2020 PLOUGH. All rights reserved. Designed by <a href="">Mohammad Sabil</a></p>
             </div>
   
         </div>
@@ -708,7 +709,6 @@
     <!-- Optional JavaScript -->
     <script src="main.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTGnDWmYKPhKslCvPfkrcZDpgT_QMHT0s&amp;callback=initMap" async="" defer=""></script>
   </head>
   </body>
 </html>
