--- a/MenuT.html
+++ b/MenuT.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Plough| TakeAway</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -50,7 +51,7 @@
     <nav class="navbar navbar-dark navbar-expand-md fixed-top" id="navbar">
       <div class="container">
         <a class="navbar-brand" href="home.html"
-          ><img class="logo" src="./img/logo.png" alt=""
+          ><img class="logo" src="./img1/logo.png" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -629,11 +630,11 @@
   </div>
 </section>
 
-<p class="section_caption"><a href="#"><img src="./img/ubereats.png" alt=""></a><a href="#"><img src="./img/deliveroo.png" alt=""></a><a href="#"><img  src="./img/justeat.png" alt=""></a></p>
+<p class="section_caption"><a href="#"><img src="./img1/ubereats.png" alt=""></a><a href="#"><img src="./img1/deliveroo.png" alt=""></a><a href="#"><img  src="./img1/justeat.png" alt=""></a></p>
    
 <div class="section_map">
   <div class="section_row">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.607710045264!2d-0.3963956842302119!3d51.50206597963424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487672bb16f0ff51%3A0xe64877aa9a462255!2sThe+Scotsman!5e0!3m2!1sen!2sin!4v1522748126218" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39736.07821839312!2d-0.4668658531511163!3d51.50395262595858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbc1439def70bab7f!2sThe%20Plough!5e0!3m2!1sen!2suk!4v1589475419082!5m2!1sen!2suk" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen=""></iframe>
   </div> 
 </div>
 
@@ -643,9 +644,9 @@
 
             <div class="col-sm-6 col-lg-3">
               <h3 class="section_footer_heading">Contacts</h3>
-              <p><i class="fas fa-map-marker-alt"></i> 96 Scotts Road, <br>Southall Middlesex <br>UB2 5DE</p>
-              <p><i class="fas fa-phone-alt"></i> + 44 20 8574 1506</p>
-              <!-- <p><i class="icon ion-ios-email-outline"></i> admin@SCOTSMAN.com</p>-->
+              <p><i class="fas fa-map-marker-alt"></i> 239 Sipson Rd,<br>West Drayton, Middlesex <br>UB7 0HW</p>
+              <p><i class="fas fa-phone-alt"></i>+ 44 20 8574 1596</p>
+
             </div>
             <div class="col-sm-6 col-lg-3">
               <h3 class="section_footer_heading">Follow us</h3>
@@ -678,7 +679,7 @@
           <div class="row">
             <div class="col-sm-12">
               <hr>
-             <p class="footer_info">© 2018 SCOTSMAN. All rights reserved. Designed by <a href="">Sab</a></p>
+             <p class="footer_info">© 2020 PLOUGH. All rights reserved. Designed by <a href="">Mohammad Sabil</a></p>
             </div>
   
         </div>
@@ -715,7 +716,6 @@
     <!-- Optional JavaScript -->
     <script src="main.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTGnDWmYKPhKslCvPfkrcZDpgT_QMHT0s&amp;callback=initMap" async="" defer=""></script>
   </head>
   </body>
 </html>
