--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-dark navbar-expand-md fixed-top" id="navbar">
       <div class="container">
-        <a class="navbar-brand" href="home.html"
+        <a class="navbar-brand" href="index.html"
           ><img class="logo" src="./img1/logo.png" alt=""
         /></a>
         <button
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="home.html"
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -91,7 +91,7 @@
           Contact
         </h1>
         <ol class="breadcrumb">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="active">Contact Us</li>
         </ol>
       </div>
