--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <nav class="navbar navbar-dark navbar-expand-md fixed-top" id="navbar">
       <div class="container">
-        <a class="navbar-brand" href="home.html"
+        <a class="navbar-brand" href="index.html"
           ><img class="logo" src="./img1/logo.png" alt=""
         /></a>
         <button
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="home.html"
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
