picture added on about page

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 mx-auto">
           <div class="section_story__quote">
             <div class="quote__img">
-              <img src="./img/owner.jpg" class="img-fluid" alt="...">
+              <img src="./img1/owner.jpg" class="img-fluid" alt="...">
             </div>
             <h3 class="qoute__title">- Food - Drinks - Life -</h3>
             <p class="qoute__text">
