fixed lightbox in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- lightbox css -->
-    <link href="./node_modules/lightbox2/dist/css/lightbox.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.css" integrity="sha256-K4PK62zpbl/XelQ0bLxyUztMw5nLdGyd2qGmPTGM1oY=" crossorigin="anonymous" />
     </head>
   <body>
     <!-- navbar -->
@@ -286,7 +287,8 @@
     ></script>
     <!-- isotope -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.js" integrity="sha256-aZcT9p29I4e3w7VyBLzcPYbTrDUHGKetZaUpPg0sU+s=" crossorigin="anonymous"></script>    <!-- gallery lightbox -->
-    <script src="./node_modules/lightbox2/dist/js/lightbox.js"></script>    
+    <!-- lightbox -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.css" integrity="sha256-K4PK62zpbl/XelQ0bLxyUztMw5nLdGyd2qGmPTGM1oY=" crossorigin="anonymous" />
     
     <!-- icons cdn -->
     <script src="https://kit.fontawesome.com/d2f9e4dfbd.js" crossorigin="anonymous"></script>
