lightbox on home page and gallery fixed using cnd

--- a/gallery.html
+++ b/gallery.html
@@ -288,7 +288,7 @@
     <!-- isotope -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.js" integrity="sha256-aZcT9p29I4e3w7VyBLzcPYbTrDUHGKetZaUpPg0sU+s=" crossorigin="anonymous"></script>    <!-- gallery lightbox -->
     <!-- lightbox -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.css" integrity="sha256-K4PK62zpbl/XelQ0bLxyUztMw5nLdGyd2qGmPTGM1oY=" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.js" integrity="sha256-+kSfYaELtdxwIN+oQ7+/0Lgza4Z182hYZ02HMd8Wblg=" crossorigin="anonymous"></script>    <!-- icons cdn -->
     
     <!-- icons cdn -->
     <script src="https://kit.fontawesome.com/d2f9e4dfbd.js" crossorigin="anonymous"></script>
